# aoc-2020

./: Cargo.toml
benches/: benchmark.rs  day-01.rs  day-02.rs  day-03.rs  day-04.rs  day-05.rs  day-06.rs
src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs
