[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Alex van de Sandt <alex@avandesa.dev>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
regex = "1.4.2"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "day-01"
harness = false

[[bench]]
name = "day-02"
harness = false

[[bench]]
name = "day-03"
harness = false
