[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Alex van de Sandt <alex@avandesa.dev>"]
edition = "2018"

[dependencies]
itertools = "0.9.0"
lazy_static = "1.4.0"
nom = "6.0.1"
petgraph = "0.5.1"
regex = "1.4.2"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "day-01"
harness = false

[[bench]]
name = "day-02"
harness = false

[[bench]]
name = "day-03"
harness = false

[[bench]]
name = "day-04"
harness = false

[[bench]]
name = "day-05"
harness = false

[[bench]]
name = "day-06"
harness = false
